fixtures/frontend/milestone-2/invalid/missing-recurrence-wakeup/main.aivi
fun step x =>
    x

signal broken : Signal Int =
    0
     @|> step
     <|@ step
